--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && tsc --noEmit && astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "0.2.0",
     "@astrojs/react": "3.0.2",
+    "@astrojs/tailwind": "5.1.0",
     "@astrojs/vercel": "4.0.5",
     "@sanity/astro": "1.3.0",
     "@sanity/image-url": "1.0.2",
@@ -22,10 +23,12 @@
     "astro-portabletext": "0.9.4",
     "autoprefixer": "10.4.16",
     "groq": "3.17.0",
+    "postcss-nesting": "12.1.5",
     "prettier-plugin-astro": "0.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sanity": "3.17.0"
+    "sanity": "3.17.0",
+    "tailwindcss": "3.4.1"
   },
   "devDependencies": {
     "@portabletext/types": "2.0.7",
@@ -37,6 +40,6 @@
     "vite": "4.4.10"
   },
   "engines": {
-    "node": ">= 16.12"
+    "node": "18.14.1"
   }
 }
