--- a/package.json
+++ b/package.json
@@ -10,34 +10,34 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.2.0",
-    "@astrojs/react": "3.0.2",
+    "@astrojs/check": "0.7.0",
+    "@astrojs/netlify": "5.3.5",
+    "@astrojs/react": "3.6.0",
     "@astrojs/tailwind": "5.1.0",
-    "@astrojs/vercel": "4.0.5",
-    "@sanity/astro": "1.3.0",
+    "@sanity/astro": "3.1.4",
     "@sanity/image-url": "1.0.2",
-    "@sanity/vision": "3.17.0",
-    "@types/react": "18.2.24",
-    "@types/react-dom": "18.2.8",
-    "astro": "3.2.2",
-    "astro-portabletext": "0.9.4",
-    "autoprefixer": "10.4.16",
-    "groq": "3.17.0",
+    "@sanity/vision": "3.49.0",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "astro": "4.11.5",
+    "astro-portabletext": "0.10.0",
+    "autoprefixer": "10.4.19",
+    "groq": "3.49.0",
     "postcss-nesting": "12.1.5",
-    "prettier-plugin-astro": "0.12.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sanity": "3.17.0",
-    "tailwindcss": "3.4.1"
+    "prettier-plugin-astro": "^0.14.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "sanity": "3.49.0",
+    "tailwindcss": "3.4.4"
   },
   "devDependencies": {
-    "@portabletext/types": "2.0.7",
-    "@sanity/types": "3.17.0",
-    "eslint": "8.50.0",
-    "prettier": "3.0.3",
-    "rimraf": "5.0.1",
-    "typescript": "5.2.2",
-    "vite": "4.4.10"
+    "@portabletext/types": "2.0.13",
+    "@sanity/types": "3.49.0",
+    "eslint": "9.6.0",
+    "prettier": "3.3.2",
+    "rimraf": "5.0.7",
+    "typescript": "5.5.3",
+    "vite": "5.3.3"
   },
   "engines": {
     "node": "18.14.1"
