--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.7.0",
-    "@astrojs/netlify": "5.3.5",
+    "@astrojs/check": "^0.8.3",
+    "@astrojs/netlify": "^5.4.0",
     "@astrojs/react": "3.6.0",
     "@astrojs/tailwind": "5.1.0",
     "@sanity/astro": "3.1.4",
@@ -19,7 +19,7 @@
     "@sanity/vision": "3.49.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "astro": "4.11.5",
+    "astro": "^4.12.2",
     "astro-portabletext": "0.10.0",
     "autoprefixer": "10.4.19",
     "groq": "3.49.0",
