--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "astro check && npm run build:css && astro build",
     "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./public/styles/tailwind.css",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "@astrojs/check": "0.8.3",
-    "@astrojs/netlify": "5.4.0",
     "@astrojs/react": "3.6.0",
     "@astrojs/tailwind": "5.1.0",
+    "@astrojs/vercel": "7.8.2",
     "@sanity/astro": "3.1.4",
     "@sanity/client": "6.21.3",
     "@sanity/image-url": "1.0.2",
@@ -22,11 +23,10 @@
     "@sanity/visual-editing": "2.1.9",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "astro": "4.14.5",
+    "astro": "4.16.6",
     "astro-portabletext": "0.10.0",
     "autoprefixer": "10.4.19",
     "groq": "3.49.0",
-    "netlify-cli": "^17.34.2",
     "postcss-nesting": "12.1.5",
     "prettier-plugin-astro": "0.14.0",
     "react": "18.3.1",
