--- a/package.json
+++ b/package.json
@@ -9,41 +9,42 @@
     "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./public/styles/tailwind.css",
     "preview": "astro preview",
     "astro": "astro",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@astrojs/check": "0.8.3",
-    "@astrojs/react": "3.6.0",
-    "@astrojs/tailwind": "5.1.0",
+    "@astrojs/check": "0.9.4",
+    "@astrojs/react": "3.6.2",
+    "@astrojs/tailwind": "5.1.2",
     "@astrojs/vercel": "7.8.2",
-    "@sanity/astro": "3.1.4",
-    "@sanity/client": "6.21.3",
+    "@sanity/astro": "3.1.6",
+    "@sanity/client": "6.22.2",
     "@sanity/image-url": "1.0.2",
-    "@sanity/vision": "3.49.0",
-    "@sanity/visual-editing": "2.1.9",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
+    "@sanity/vision": "3.61.0",
+    "@sanity/visual-editing": "2.1.10",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
     "astro": "4.16.6",
     "astro-portabletext": "0.10.0",
-    "autoprefixer": "10.4.19",
-    "groq": "3.49.0",
-    "postcss-nesting": "12.1.5",
-    "prettier-plugin-astro": "0.14.0",
+    "autoprefixer": "10.4.20",
+    "groq": "3.61.0",
+    "postcss-nesting": "13.0.0",
+    "prettier-plugin-astro": "0.14.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sanity": "3.55.0",
-    "tailwindcss": "3.4.4"
+    "sanity": "3.61.0",
+    "tailwindcss": "3.4.14"
   },
   "devDependencies": {
     "@portabletext/types": "2.0.13",
-    "@sanity/types": "3.49.0",
-    "eslint": "9.6.0",
-    "prettier": "3.3.2",
-    "rimraf": "5.0.7",
-    "typescript": "5.5.3",
-    "vite": "5.3.3"
+    "@sanity/types": "3.61.0",
+    "eslint": "9.13.0",
+    "prettier": "3.3.3",
+    "rimraf": "6.0.1",
+    "typescript": "5.6.3",
+    "vite": "5.4.9"
   },
   "engines": {
-    "node": "20.16.0"
+    "node": "22.x"
   }
 }
