--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./public/styles/tailwind.css",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint 'src/**/*.{astro,js,jsx,ts,tsx}'",
     "clean": "rimraf dist"
   },
   "dependencies": {
@@ -36,12 +36,16 @@
     "tailwindcss": "3.4.14"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@portabletext/types": "2.0.13",
     "@sanity/types": "3.61.0",
-    "eslint": "9.13.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.11.0",
     "prettier": "3.3.3",
     "rimraf": "6.0.1",
     "typescript": "5.6.3",
+    "typescript-eslint": "^8.10.0",
     "vite": "5.4.9"
   },
   "engines": {
