--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && npm run build:css && astro build",
+    "build": "npm run build:css && astro build",
     "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./public/styles/tailwind.css",
     "preview": "astro preview",
     "astro": "astro",
@@ -13,27 +13,27 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@astrojs/check": "0.9.4",
-    "@astrojs/react": "3.6.2",
-    "@astrojs/tailwind": "5.1.2",
-    "@astrojs/vercel": "7.8.2",
-    "@sanity/astro": "3.1.6",
-    "@sanity/client": "6.22.2",
+    "@astrojs/netlify": "5.4.0",
+    "@astrojs/react": "3.6.0",
+    "@astrojs/tailwind": "5.1.0",
+    "@sanity/astro": "3.1.4",
+    "@sanity/client": "6.21.3",
     "@sanity/image-url": "1.0.2",
-    "@sanity/vision": "3.61.0",
-    "@sanity/visual-editing": "2.1.10",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.1",
-    "astro": "4.16.6",
+    "@sanity/vision": "3.49.0",
+    "@sanity/visual-editing": "2.1.9",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "astro": "4.14.5",
     "astro-portabletext": "0.10.0",
-    "autoprefixer": "10.4.20",
-    "groq": "3.61.0",
-    "postcss-nesting": "13.0.0",
-    "prettier-plugin-astro": "0.14.1",
+    "autoprefixer": "10.4.19",
+    "groq": "3.49.0",
+    "netlify-cli": "^17.34.2",
+    "postcss-nesting": "12.1.5",
+    "prettier-plugin-astro": "0.14.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sanity": "3.61.0",
-    "tailwindcss": "3.4.14"
+    "sanity": "3.55.0",
+    "tailwindcss": "3.4.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -42,7 +42,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.11.0",
-    "prettier": "3.3.3",
+    "prettier": "^3.3.3",
     "rimraf": "6.0.1",
     "typescript": "5.6.3",
     "typescript-eslint": "^8.10.0",
