--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "astro-portabletext": "0.10.0",
     "autoprefixer": "10.4.19",
     "groq": "3.49.0",
-    "netlify-cli": "^17.34.2",
+    "netlify-cli": "17.34.2",
     "postcss-nesting": "12.1.5",
     "prettier-plugin-astro": "0.14.0",
     "react": "18.3.1",
@@ -36,16 +36,16 @@
     "tailwindcss": "3.4.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
+    "@eslint/js": "9.13.0",
     "@portabletext/types": "2.0.13",
     "@sanity/types": "3.61.0",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react": "^7.37.1",
-    "globals": "^15.11.0",
-    "prettier": "^3.3.3",
+    "eslint": "9.13.0",
+    "eslint-plugin-react": "7.37.1",
+    "globals": "15.11.0",
+    "prettier": "3.3.3",
     "rimraf": "6.0.1",
     "typescript": "5.6.3",
-    "typescript-eslint": "^8.10.0",
+    "typescript-eslint": "8.10.0",
     "vite": "5.4.9"
   },
   "engines": {
