--- a/package.json
+++ b/package.json
@@ -13,42 +13,42 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@astrojs/netlify": "5.4.0",
-    "@astrojs/react": "3.6.0",
-    "@astrojs/tailwind": "5.1.0",
-    "@sanity/astro": "3.1.4",
-    "@sanity/client": "6.21.3",
-    "@sanity/image-url": "1.0.2",
-    "@sanity/vision": "3.49.0",
-    "@sanity/visual-editing": "2.1.9",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "astro": "4.14.5",
-    "astro-portabletext": "0.10.0",
-    "autoprefixer": "10.4.19",
-    "groq": "3.49.0",
-    "netlify-cli": "17.34.2",
-    "postcss-nesting": "12.1.5",
-    "prettier-plugin-astro": "0.14.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "sanity": "3.55.0",
-    "tailwindcss": "3.4.4"
+    "@astrojs/netlify": "^6.2.5",
+    "@astrojs/react": "4.2.3",
+    "@astrojs/tailwind": "6.0.2",
+    "@sanity/astro": "3.2.6",
+    "@sanity/client": "6.28.4",
+    "@sanity/image-url": "1.1.0",
+    "@sanity/vision": "3.82.0",
+    "@sanity/visual-editing": "2.8.0",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
+    "astro": "5.6.1",
+    "astro-portabletext": "0.11.1",
+    "autoprefixer": "10.4.16",
+    "groq": "3.82.0",
+    "netlify-cli": "19.1.5",
+    "postcss-nesting": "12.0.2",
+    "prettier-plugin-astro": "0.14.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "sanity": "3.82.0",
+    "tailwindcss": "3.4.1"
   },
   "devDependencies": {
-    "@eslint/js": "9.13.0",
+    "@eslint/js": "9.24.0",
     "@portabletext/types": "2.0.13",
-    "@sanity/types": "3.61.0",
-    "eslint": "9.13.0",
-    "eslint-plugin-react": "7.37.1",
-    "globals": "15.11.0",
-    "prettier": "3.3.3",
+    "@sanity/types": "3.82.0",
+    "eslint": "9.24.0",
+    "eslint-plugin-react": "7.37.5",
+    "globals": "16.0.0",
+    "prettier": "3.5.3",
     "rimraf": "6.0.1",
-    "typescript": "5.6.3",
-    "typescript-eslint": "8.10.0",
-    "vite": "5.4.9"
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.29.0",
+    "vite": "6.2.5"
   },
   "engines": {
-    "node": "20.x"
+    "node": ">=20.x"
   }
 }
