--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@astrojs/netlify": "^6.2.5",
+    "@astrojs/netlify": "6.2.5",
     "@astrojs/react": "4.2.3",
     "@astrojs/tailwind": "6.0.2",
     "@sanity/astro": "3.2.6",
     "@sanity/client": "6.28.4",
     "@sanity/image-url": "1.1.0",
     "@sanity/vision": "3.82.0",
-    "@sanity/visual-editing": "2.8.0",
+    "@sanity/visual-editing": "2.13.15",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "astro": "5.6.1",
     "astro-portabletext": "0.11.1",
-    "autoprefixer": "10.4.16",
+    "autoprefixer": "10.4.21",
     "groq": "3.82.0",
     "netlify-cli": "19.1.5",
-    "postcss-nesting": "12.0.2",
+    "postcss-nesting": "13.0.1",
     "prettier-plugin-astro": "0.14.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
